--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -151,7 +151,7 @@
   font-weight: 600;
   text-decoration: none;
   text-align: center;
-  width: 50%;
+  width: 60%;
   // width: 100%;
   z-index: 1000;
   @media (max-width: 1280px) {
@@ -165,7 +165,7 @@
   background-color: white;
   color: black;
   font-style: italic;
-  font-size: 1.8rem;
+  // font-size: 1.8rem;
   transition: 0.3s;
 }
 
