--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -248,9 +248,6 @@
 }
 
 
-
-
-
 .list-swatches{
     display: flex;
     flex-direction: column;
@@ -310,7 +307,7 @@
   }
   
   
-  .fixedbutton__img{
+.fixedbutton__img{
     width: 100px!important;
     height: auto;
     z-index: 1000;
@@ -319,4 +316,17 @@
       width: 80px!important;
     }
   }
-  
+
+
+// REGISTER FORMS
+.main_forms{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 25px;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        gap: 10px;
+    }
+}
