--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -343,7 +343,7 @@
 }
 
 .main_forms__register__forms{
-    .forms_label__input{
+    .forms_label__input .forms_label__textinput{
         padding: 10px;
         border-radius: 5px;
         border: 1px solid #ccc;
