--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -380,3 +380,13 @@
     font-size: 1rem;
 }
 
+.main_forms__login__forms__submit .forms_label__button {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 1rem;
+    background-color: #000;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+}
