--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -349,6 +349,8 @@
         border-radius: 5px;
         border: 1px solid #ccc;
         font-size: 1rem;
+        font-family: "Helvetica Neue LT", sans-serif;
+
     }
     
     
@@ -357,6 +359,7 @@
         border-radius: 5px;
         border: 1px solid #ccc;
         font-size: 1rem;
+        font-family: "Helvetica Neue LT", sans-serif;
     }
 }
 
