--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -335,10 +335,10 @@
     font-size: 1.5rem;
     font-weight: 700;
     text-align: center;
-    padding-bottom: 50px;
+    padding: 50px 0;
     @media (max-width: 768px) {
         font-size: 1.2rem;
-        padding-bottom: 15px;
+        padding:15px 0;
     }
 }
 
