--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -324,12 +324,12 @@
     flex-direction: row;
     justify-content: center;
     gap: 25px;
-    padding: 0 10%;
+    padding: 3% 10%;
 
     @media (max-width: 1280px) {
         flex-direction: column;
         gap: 10px;
-        padding: 0 2%;
+        padding: 2%;
     }
 }
 
@@ -383,9 +383,8 @@
 
 
 .main_forms__separator{
-    width: 5px;
-    height: 100%;
-    background-color: #ccc;
+    width: 3px;
+    background-color: #3d3c3c;
 }
 
 .main_forms__login__forms{
