--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -336,7 +336,7 @@
 .main_forms__title{
     font-size: 1.5rem;
     font-weight: 700;
-    text-align: center;
+    // text-align: center;
     padding: 50px 0;
     @media (max-width: 768px) {
         font-size: 1.2rem;
