--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -337,10 +337,10 @@
     font-size: 1.5rem;
     font-weight: 700;
     // text-align: center;
-    padding: 50px 0;
+    padding-bottom: 20px;
     @media (max-width: 768px) {
         font-size: 1.2rem;
-        padding:15px 0;
+        padding-bottom: 10px;
     }
 }
 
