--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -360,17 +360,20 @@
 }
 
 .product-name{
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: bold;
   margin-bottom: 10px;
 
   @media (max-width: 768px) {
-      font-size: 1rem;
+      font-size: 0.9rem;
   }
 }
 
 .product-category{
+  font-size: 0.9rem;
+  font-style: italic;
   @media (max-width: 768px) {
+      font-size: 0.8rem;
       display: none;
   }
 }
