--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -380,30 +380,33 @@
 
 .product-price{
   display: flex;
-  flex-direction: row;
-  justify-content: end;
-  align-items: center;
-  padding-top: 10px;
 
-  @media (max-width: 768px) {
-      flex-direction: column;
-      align-items: baseline;
-  }
-
-
-  .product-price__mayorista{
-      color: #000;
-      font-size: 1.25rem;
+  .product-price__only{
+      font-size: 0.9rem;
       font-weight: bold;
-      text-decoration: none;
-      display: flex;
-      flex-direction: column;
-      padding: 0 10px;
-
+      margin-right: 5px;
       @media (max-width: 768px) {
           font-size: 0.8rem;
-          padding: 0;
       }
-
   }
+
+  .product-price__after{
+      font-size: 0.9rem;
+      font-weight: bold;
+      color: #C5312D;
+      @media (max-width: 768px) {
+          font-size: 0.8rem;
+      }
+  }
+
+  .product-price__before{
+      font-size: 0.75rem;
+      font-weight: bold;
+      color: black;
+      text-decoration: line-through;
+      @media (max-width: 768px) {
+          font-size: 0.8rem;
+      }
+  }
+
 }
