--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -380,9 +380,14 @@
 
 .product-price{
   display: flex;
+  justify-content: flex-start;
+  align-items: end;
+  gap: 10px;
+  margin-top: 10px;
+
 
   .product-price__only{
-      font-size: 0.9rem;
+      font-size: 1.2rem;
       font-weight: bold;
       margin-right: 5px;
       @media (max-width: 768px) {
@@ -391,7 +396,7 @@
   }
 
   .product-price__after{
-      font-size: 0.9rem;
+      font-size: 1.2rem;
       font-weight: bold;
       color: #C5312D;
       @media (max-width: 768px) {
